--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
-/* src/App.css */
-
 .app {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; 
-  background-color: #eaeaea;
+  height: 100vh;
+  padding: 10px;
+  background-color: #f0f0f0;
 }
 
 .main-content {
   display: flex;
-  flex: 1;
+  gap: 20px;
+  flex-grow: 1;
 }
