--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,7 +4,7 @@
   box-shadow: none; 
   display: flex; 
   align-items: center; 
-  margin: 5px; 
+  margin-bottom: 5px;
 }
 
 .header-container h1 {
