--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,33 +1,49 @@
 .card {
-  width: 430px;
-  height: 330px; 
-  background-color: white;
-  margin: 10px;
   display: flex;
   flex-direction: column;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  width: 430px;
+  height: 330px;
+  background-color: #ffffff;
+  cursor: pointer;
+  transition: transform 0.2s;
+  margin: 10px;
+}
+
+.card:hover {
+  transform: scale(1.05);
 }
 
 .card-title {
-  margin: 0;
-  padding: 10px;
-  text-align: left;
+  font-size: 18px;
+  margin: 15px 15px;
 }
 
 .card-content {
   display: flex;
-  flex: 1;
+  flex-grow: 1;
 }
 
 .card-image {
-  width: 150px;
-  height: auto;
+  width: 215px;
+  height: 100%;
   object-fit: cover;
+  margin: 0;
 }
 
-.card-description {
-  padding: 10px;
+.card-info {
   display: flex;
-  flex-direction: column; 
-  justify-content: space-between;
+  flex-direction: column;
+  gap: 8px;
+  padding: 15px; 
+}
+
+.card-info p {
+  margin: 0;
+  color: #555;
+}
+
+.time {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
 }
