--- a/src/components/CardContainer.css
+++ b/src/components/CardContainer.css
@@ -1,30 +1,31 @@
 .card-container {
-  position: relative;
-  padding: 0px;
   background-color: #f5f5f5;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  margin: 5px auto; 
-}
-
-.card-title {
-  margin: 0 0 10px 0;
-  padding: 10px 5px;
-  background-color: white;
+  width: 75%;
+  height: 95%;
+  overflow-y: auto;
 }
 
 .card-wrapper {
-  display: grid; 
-  grid-template-columns: repeat(3, 0.1fr); 
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
+.card-header {
+  background-color: #ffffff;
+  padding: 10px 0;
+  align-self: stretch;
+  margin-bottom: 15px;
+}
 
-.sticky-pagination {
-  display: flex;
-  justify-content: center;
-  padding: 10px;
-  position: sticky;
-  bottom: 0;
-  width: 100%; 
+.card-header h2 {
+  margin: 10px;
+  font-size: 20px;
+  color: #333;
+}
+
+.card-header-count {
+  flex: auto;
+  font-size: 19px;
+  color: #b9b9b9;
 }
