--- a/src/components/FilterSidebar.css
+++ b/src/components/FilterSidebar.css
@@ -1,65 +1,94 @@
-/* FilterSidebar.css */
-
 .filter-sidebar {
-  background-color: white;
-  margin: 10px;
-  height: 100%;
-  padding: 20px; 
-  width: 25%; 
-}
-
-.filter-sidebar img {
-  width: 100%;
-  height: auto;
-  margin-bottom: 15px;
-}
-
-.filter-sidebar p {
-  margin-bottom: 15px;
+  background-color: #ffffff;
+  padding: 20px;
+  width: 25%;
+  overflow-y: auto;
+  box-sizing: border-box;
+  height: 95%;
 }
 
 .filter-item {
   display: flex;
   align-items: center;
-  margin-bottom: 15px; 
+  margin-bottom: 15px;
 }
 
 .filter-label {
   flex: 1;
-  font-weight: bold; 
+  font-weight: bold;
+  margin-right: 10px;
 }
 
-.filter-select {
+select {
   flex: 2;
-  padding: 5px; 
-  margin-left: 10px; 
-  border: 1px solid #ccc;
-  border-radius: 4px; 
-  width: auto;
+  padding: 5px;
 }
 
 .difficulty-buttons {
   display: flex;
-  margin-top: 10px; 
+  gap: 5px;
+  flex-wrap: wrap;
+
 }
 
 .difficulty-buttons button {
-  padding: 8px 12px; 
-  margin-right: 5px; 
+  padding: 8px;
   border: 1px solid #007bff;
-  background-color: white;
-  color: #007bff; 
-  border-radius: 4px; 
-  cursor: pointer; 
-  transition: background-color 0.3s, color 0.3s; 
+  background-color: #fff;
+  color: #007bff;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
 }
 
-.difficulty-buttons button:hover {
-  background-color: #007bff; 
-  color: white; 
+.difficulty-buttons button.active {
+  background-color: #007bff;
+  color: #fff;
 }
 
-.difficulty-buttons button:disabled {
-  cursor: not-allowed; 
-  opacity: 0.5; 
+.sidebar-image {
+  width: 100%;
+  height: auto;
+  margin-bottom: 15px;
+}
+
+.sidebar-fact {
+  font-size: 14px;
+  color: #555;
+  margin-bottom: 20px;
+}
+
+.reset-button {
+  padding: 10px;
+  background-color: #ffffff;
+  color: #85b0ff;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.reset-button:hover {
+  color: #007bff;
+}
+
+.try-luck-text {
+  margin-top: 20px;
+  font-size: 14px;
+  color: #818181;
+  margin-top: 40px;
+}
+
+.luck-button {
+  margin-top: 10px;
+  padding: 10px;
+  background-color: #ffffff;
+  color: #818181;
+  border: 1px solid rgb(182, 182, 182);
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.luck-button:hover {
+  background-color: #007bff;
+  color: #000000;
 }
