--- a/src/components/DifficultyButton.scss
+++ b/src/components/DifficultyButton.scss
@@ -5,13 +5,14 @@
   color: #007bff;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
-}
+
   
-  .difficulty-button:hover {
+  &:hover {
     background-color: #e0e0e0;
   }
   
-  .difficulty-button.active {
+  &.active {
     background-color: #007bff;
     color: #fff;
   }
+}
